docs route path correction
