# dist/src/core/swagger/swagger.json
@@ -171,7 +171,7 @@
                 }
             }
         },
-        "/aiTools/secure/read/{agentId}": {
+        "/ai-tools/secure/read/{agentId}": {
             "get": {
                 "tags": [
                     "AiTools"
@@ -208,7 +208,7 @@
                 ]
             }
         },
-        "/aiTools/secure/read": {
+        "/ai-tools/secure/read": {
             "get": {
                 "tags": [
                     "AiTools"
@@ -226,7 +226,7 @@
                 ]
             }
         },
-        "/aiTools/secure/delete": {
+        "/ai-tools/secure/delete": {
             "delete": {
                 "tags": [
                     "AiTools"
